--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,9 @@ spring.h2.console.settings.web-allow-others=false
 #spring.jpa.hibernate.ddl_auto=validate
 #spring.jpa.hibernate.show-sql=true
 
+spring.jpa.show-sql=true
+spring.jpa.properties.format_sql=true
+
 #https://www.baeldung.com/spring-boot-actuator-startup
 #management.endpoints.web.exposure.include=startup
 #https://docs.spring.io/spring-boot/docs/2.1.11.RELEASE/reference/html/production-ready-endpoints.html
