excluding generated sources (still trying)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,3 +37,5 @@ management.endpoint.beans.cache.time-to-live=10s
 
 springdoc.packagesToScan=br.com.rqgr
 springdoc.pathsToMatch=/**
+
+lombok.addLombokGeneratedAnnotation = true
