--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,8 +6,8 @@ services:
     container_name: mysql_container
     restart: always
     environment:
-      - MYSQL_ROOT_PASSWORD: password
-      - MYSQL_DATABASE: school
+      MYSQL_ROOT_PASSWORD: password
+      MYSQL_DATABASE: school
     ports:
       - "3306:3306"
     cap_add:
@@ -26,10 +26,10 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - spring.datasource.url=jdbc:mysql://mysql-db:3306/school?useSSL=false
-      - spring.datasource.username=root
-      - spring.datasource.password=password
-      - spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+      spring.datasource.url: jdbc:mysql://mysql-db:3306/school?useSSL=false
+      spring.datasource.username: root
+      spring.datasource.password: password
+      spring.jpa.properties.hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
     networks:
       - springmysql-net
     depends_on:
