--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,8 @@ services:
       - "3306:3306"
     cap_add:
       - SYS_NICE  # Disable Warning "mbind: Operation not permitted"
+    volumes:
+      - db:/var/lib/mysql
   adminer:
     image: adminer:4
     container_name: adminer_container
@@ -26,13 +28,22 @@ services:
     ports:
       - "8080:8080"
     environment:
-      spring.datasource.url: jdbc:mysql://mysql-db:3306/school?useSSL=false
-      spring.datasource.username: root
-      spring.datasource.password: password
-      spring.jpa.properties.hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+      SPRING_APPLICATION_JSON: '{
+        "spring.datasource.url"  : "jdbc:mysql://mysql-db:3306/school?useSSL=false,
+        "spring.datasource.username" : "root",
+        "spring.datasource.password" : "password",
+        "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
+        "spring.jpa.hibernate.ddl-auto" : "update"
+      }'
+    volumes:
+      - .m2:/root/.m2
+    stdin_open: true
+    tty: true
     networks:
       - springmysql-net
     depends_on:
       - mysql-db
+volumes:
+  db:
 networks:
   springmysql-net:
