--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,9 @@ nb-configuration.xml
 # Compiled class file
 *.class
 
+### Maven ###
+.m2
+
 #################################################################################
 
 # Log file
