--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -32,8 +32,9 @@ services:
         "spring.datasource.url"  : "jdbc:mysql://mysql-db:3306/school?useSSL=false",
         "spring.datasource.username" : "root",
         "spring.datasource.password" : "password",
-        "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
-        "spring.jpa.hibernate.ddl-auto" : "update"
+        "spring.jpa.database-platform" : "org.hibernate.dialect.MySQL5InnoDBDialect",
+        "spring.jpa.hibernate.ddl-auto" : "update",
+		"spring.h2.console.enabled" : "false"
       }'
     volumes:
       - .m2:/root/.m2
