--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,7 +29,7 @@ services:
       - "8080:8080"
     environment:
       SPRING_APPLICATION_JSON: '{
-        "spring.datasource.url"  : "jdbc:mysql://mysql-db:3306/school?useSSL=false",
+        "spring.datasource.url"  : "jdbc:mysql://mysql_container:3306/school?useSSL=false",
         "spring.datasource.username" : "root",
         "spring.datasource.password" : "password",
         "spring.jpa.database-platform" : "org.hibernate.dialect.MySQL5InnoDBDialect",
