--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,22 +6,30 @@ spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
 spring.mvc.format.time=HH:mm:ss
 
 # https://www.baeldung.com/spring-boot-h2-database
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#spring.jpa.defer-datasource-initialization=true
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=true
 
+#spring.jpa.defer-datasource-initialization=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+
+#spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.datasource.url=jdbc:mysql://localhost:3306/school?useSSL=false
+#spring.datasource.driverClassName=com.mysql.jdbc.Driver
+#spring.datasource.username=root
+#spring.datasource.password=password
+
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-##spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url = jdbc:postgresql://localhost:5432/school
+#spring.datasource.driverClassName=org.postgresql.Driver
 #spring.datasource.username = postgres
 #spring.datasource.password = postgres
-#spring.datasource.url = jdbc:postgresql://localhost:5432/school
+
 #spring.jpa.hibernate.ddl_auto=validate
 #spring.jpa.hibernate.show-sql=true
 
