--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,12 +29,12 @@ services:
       - "8080:8080"
     environment:
       SPRING_APPLICATION_JSON: '{
+	    "spring.h2.console.enabled" : "false",
+	    "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
         "spring.datasource.url"  : "jdbc:mysql://mysql_container:3306/school?useSSL=false",
         "spring.datasource.username" : "root",
         "spring.datasource.password" : "password",
-        "spring.jpa.database-platform" : "org.hibernate.dialect.MySQL5InnoDBDialect",
-        "spring.jpa.hibernate.ddl-auto" : "update",
-		"spring.h2.console.enabled" : "false"
+        "spring.jpa.hibernate.ddl-auto" : "update"
       }'
     volumes:
       - .m2:/root/.m2
