--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,12 +6,13 @@ spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
 spring.mvc.format.time=HH:mm:ss
 
 # https://www.baeldung.com/spring-boot-h2-database
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.h2.console.settings.trace=false
-spring.h2.console.settings.web-allow-others=true
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+#spring.h2.console.settings.trace=false
+#spring.h2.console.settings.web-allow-others=true
 
 #spring.jpa.defer-datasource-initialization=true
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
