Config Dockerfile and docker-compose

--- a/pom.xml
+++ b/pom.xml
@@ -165,6 +165,7 @@
     </dependencies>
 
     <build>
+        <finalName>rest-api</finalName>
         <pluginManagement>
             <plugins>
                 <!--plugin>
