--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,13 +28,12 @@ services:
     ports:
       - "8080:8080"
     environment:
-      SPRING_APPLICATION_JSON: '{
-        "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
-        "spring.datasource.url"  : "jdbc:mysql://mysql_container:3306/school?useSSL=false",
-        "spring.datasource.username" : "root",
-        "spring.datasource.password" : "password",
-        "spring.jpa.hibernate.ddl-auto" : "update"
-      }'
+      - SPRING_PROFILES_ACTIVE=mysql
+      - spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+      - spring.datasource.url=jdbc:mysql://mysql-db:3306/school?useSSL=false
+      - spring.datasource.username=root
+      - spring.datasource.password=password
+      - spring.jpa.hibernate.ddl-auto=update
     volumes:
       - .m2:/root/.m2
     stdin_open: true
