--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,20 +19,7 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 
-#spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
-#spring.datasource.url=jdbc:mysql://localhost:3306/school?useSSL=false
-#spring.datasource.driverClassName=com.mysql.jdbc.Driver
-#spring.datasource.username=root
-#spring.datasource.password=password
-
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-#spring.datasource.url = jdbc:postgresql://localhost:5432/school
-#spring.datasource.driverClassName=org.postgresql.Driver
-#spring.datasource.username = postgres
-#spring.datasource.password = postgres
-
 #spring.jpa.hibernate.ddl_auto=validate
-#spring.jpa.hibernate.show-sql=true
 
 spring.jpa.show-sql=true
 spring.jpa.properties.format_sql=true
@@ -48,3 +35,19 @@ springdoc.packagesToScan=br.com.rqgr
 springdoc.pathsToMatch=/**
 
 lombok.addLombokGeneratedAnnotation = true
+
+#---
+spring.config.activate.on-profile=mysql
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
+spring.datasource.url=jdbc:mysql://localhost:3306/school?useSSL=false
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=password
+
+#---
+spring.config.activate.on-profile=postgres
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url = jdbc:postgresql://localhost:5432/school
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.username = postgres
+spring.datasource.password = postgres
