--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,7 +28,7 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - SPRING_PROFILES_ACTIVE=mysql
+      - ACTIVE=mysql
       - spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
       - spring.datasource.url=jdbc:mysql://mysql-db:3306/school?useSSL=false
       - spring.datasource.username=root
