--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,6 @@ version: '3.8'
 services:
   mysql-db:
     image: mysql:8.0
-    container_name: mysql_container
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: password
@@ -14,21 +13,21 @@ services:
       - SYS_NICE  # Disable Warning "mbind: Operation not permitted"
     volumes:
       - db:/var/lib/mysql
+    networks:
+      - springmysql-net
   adminer:
     image: adminer:4
-    container_name: adminer_container
     restart: always
     ports:
       - 8081:8080
   server:
     image: server
-    container_name: server_container
     restart: on-failure
     build: .
     ports:
       - "8080:8080"
     environment:
-      - spring.datasource.url=jdbc:mysql://mysql-db:3306/school?useSSL=false
+      - spring.datasource.url=jdbc:mysql://mysql-db:3306/school?autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false
     volumes:
       - .m2:/root/.m2
     stdin_open: true
