--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,6 +20,8 @@ services:
     restart: always
     ports:
       - 8081:8080
+    networks:
+      - springmysql-net
   server:
     image: server
     restart: on-failure
